// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CityModal Component > handles view image file after upload 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-40"
  >
    <div
      class="bg-white rounded-xl shadow-lg p-8 w-full max-w-md relative"
    >
      <button
        class="absolute top-3 right-3 text-slate-400 hover:text-slate-700 text-xl font-bold"
      >
        ×
      </button>
      <h3
        class="text-xl font-bold mb-4 text-slate-800"
      >
        Add City
      </h3>
      <form
        class="flex flex-col gap-4"
      >
        <input
          class="border border-slate-200 rounded-lg px-4 py-2 focus:outline-none focus:border-blue-500"
          placeholder="City Name"
          required=""
          type="text"
          value="Sample City"
        />
        <select
          class="border border-slate-200 rounded-lg px-4 py-2 focus:outline-none focus:border-blue-500"
        >
          <option
            value=""
          >
            Select State
          </option>
          <option
            value="1"
          >
            State One
          </option>
          <option
            value="2"
          >
            State Two
          </option>
        </select>
        <div
          class="space-y-2"
        >
          <label
            class="block text-sm font-medium text-slate-700"
          >
            City Image
          </label>
          <div
            class="relative"
          >
            <img
              alt="Preview"
              class="w-full h-32 object-cover rounded-lg border border-slate-200"
              src="true"
            />
            <button
              class="absolute top-2 right-2 bg-red-500 text-white rounded-full p-1 hover:bg-red-600"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-x w-4 h-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 6 6 18"
                />
                <path
                  d="m6 6 12 12"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="flex gap-2 justify-end"
        >
          <button
            class="px-4 py-2 rounded-lg bg-slate-100 hover:bg-slate-200 text-slate-700 font-semibold"
            type="button"
          >
            Cancel
          </button>
          <button
            class="px-4 py-2 rounded-lg bg-blue-600 hover:bg-blue-700 text-white font-semibold disabled:opacity-50"
            type="submit"
          >
            Save
          </button>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CityModal Component > matches snapshot (with image upload) 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-40"
  >
    <div
      class="bg-white rounded-xl shadow-lg p-8 w-full max-w-md relative"
    >
      <button
        class="absolute top-3 right-3 text-slate-400 hover:text-slate-700 text-xl font-bold"
      >
        ×
      </button>
      <h3
        class="text-xl font-bold mb-4 text-slate-800"
      >
        Add City
      </h3>
      <form
        class="flex flex-col gap-4"
      >
        <input
          class="border border-slate-200 rounded-lg px-4 py-2 focus:outline-none focus:border-blue-500"
          placeholder="City Name"
          required=""
          type="text"
          value="Sample City"
        />
        <select
          class="border border-slate-200 rounded-lg px-4 py-2 focus:outline-none focus:border-blue-500"
        >
          <option
            value=""
          >
            Select State
          </option>
          <option
            value="1"
          >
            State One
          </option>
          <option
            value="2"
          >
            State Two
          </option>
        </select>
        <div
          class="space-y-2"
        >
          <label
            class="block text-sm font-medium text-slate-700"
          >
            City Image
          </label>
          <div
            class="border-2 border-dashed border-slate-300 rounded-lg p-6 text-center hover:border-blue-400 transition-colors"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-upload mx-auto h-8 w-8 text-slate-400 mb-2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 3v12"
              />
              <path
                d="m17 8-5-5-5 5"
              />
              <path
                d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
              />
            </svg>
            <input
              accept="image/*"
              class="hidden"
              id="image-upload"
              type="file"
            />
            <label
              class="cursor-pointer text-sm text-slate-600 hover:text-blue-600"
              for="image-upload"
            >
              Click to upload image
            </label>
          </div>
        </div>
        <div
          class="flex gap-2 justify-end"
        >
          <button
            class="px-4 py-2 rounded-lg bg-slate-100 hover:bg-slate-200 text-slate-700 font-semibold"
            type="button"
          >
            Cancel
          </button>
          <button
            class="px-4 py-2 rounded-lg bg-blue-600 hover:bg-blue-700 text-white font-semibold disabled:opacity-50"
            type="submit"
          >
            Save
          </button>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CityModal Component > matches snapshot (without image upload) 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-40"
  >
    <div
      class="bg-white rounded-xl shadow-lg p-8 w-full max-w-md relative"
    >
      <button
        class="absolute top-3 right-3 text-slate-400 hover:text-slate-700 text-xl font-bold"
      >
        ×
      </button>
      <h3
        class="text-xl font-bold mb-4 text-slate-800"
      >
        Add City
      </h3>
      <form
        class="flex flex-col gap-4"
      >
        <input
          class="border border-slate-200 rounded-lg px-4 py-2 focus:outline-none focus:border-blue-500"
          placeholder="City Name"
          required=""
          type="text"
          value="Sample City"
        />
        <select
          class="border border-slate-200 rounded-lg px-4 py-2 focus:outline-none focus:border-blue-500"
        >
          <option
            value=""
          >
            Select State
          </option>
          <option
            value="1"
          >
            State One
          </option>
          <option
            value="2"
          >
            State Two
          </option>
        </select>
        <div
          class="flex gap-2 justify-end"
        >
          <button
            class="px-4 py-2 rounded-lg bg-slate-100 hover:bg-slate-200 text-slate-700 font-semibold"
            type="button"
          >
            Cancel
          </button>
          <button
            class="px-4 py-2 rounded-lg bg-blue-600 hover:bg-blue-700 text-white font-semibold disabled:opacity-50"
            type="submit"
          >
            Save
          </button>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;
